<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/registerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/regisztracio"
            android:textAlignment="center"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            android:layout_below="@+id/registerTextView"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/felhasznalonev"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="text"/>

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            android:layout_below="@+id/user"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/mail_cim"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            android:layout_below="@+id/userEmail"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/jelszo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/userPassword2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            android:layout_below="@+id/userPassword"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/jelszo_ujra"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/userPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            android:layout_below="@+id/userPassword2"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/telefonszam"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/userAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_bg"
            android:padding="16dp"
            android:layout_below="@+id/userPhone"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/szallitasi_cim"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="textMultiLine|textPostalAddress"
            android:maxLines="3"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/userAddress"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/regisztracio"
                android:onClick="register"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/megse"
                android:onClick="cancel"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
